Implement versioned site structure backend
